@@ -552,6 +552,12 @@ class HblReportTest extends CommonMocks {
         packingModel.setLength(BigDecimal.TEN);
         packingModel.setWidth(BigDecimal.TEN);
         packingModel.setHeight(BigDecimal.TEN);
+        packingModel.setWeight(BigDecimal.TEN);
+        packingModel.setWeightUnit("KG");
+        packingModel.setVolume(BigDecimal.TEN);
+        packingModel.setVolumeUnit("M3");
+        packingModel.setPacks("5");
+        packingModel.setPacksType("BAL");
         shipmentModel.setPackingList(Arrays.asList(packingModel));
 
         BookingCarriageModel bookingCarriageModel = new BookingCarriageModel();
@@ -710,6 +716,8 @@ class HblReportTest extends CommonMocks {
         shipmentModel.setDeliveryDetails(delivertDetails);
 
         PackingModel packingModel = new PackingModel();
+        packingModel.setPacks("3");
+        packingModel.setPacksType("BAG");
         packingModel.setLength(BigDecimal.TEN);
         packingModel.setWidth(BigDecimal.TEN);
         packingModel.setHeight(BigDecimal.TEN);
@@ -842,6 +850,7 @@ class HblReportTest extends CommonMocks {
 
     @Test
     void populateDictionaryWithIsHblTrue() throws JsonProcessingException {
+        ShipmentSettingsDetailsContext.getCurrentTenantSettings().setIsRunnerV3Enabled(true);
         HblModel hblModel = new HblModel();
         hblModel.setIsHbl(true);
         UsersDto usersDto = new UsersDto();
@@ -879,6 +888,7 @@ class HblReportTest extends CommonMocks {
         shipmentModel.setTransportInstructionId(12L);
         shipmentModel.setTransportMode(ReportConstants.SEA);
         shipmentModel.setDirection(ReportConstants.EXP);
+        shipmentModel.setShipmentType(Constants.CARGO_TYPE_FCL);
         shipmentModel.setFreightLocal(BigDecimal.TEN);
         shipmentModel.setFreightLocalCurrency("INR");
         shipmentModel.setFreightOverseas(BigDecimal.TEN);
@@ -888,6 +898,8 @@ class HblReportTest extends CommonMocks {
         shipmentModel.setVolume(BigDecimal.TEN);
         shipmentModel.setChargable(BigDecimal.TEN);
         shipmentModel.setVolumetricWeight(BigDecimal.TEN);
+        shipmentModel.setGoodsDescription("DESC");
+        shipmentModel.setMarksNum("Marks");
         shipmentModel.setNoOfPacks(10);
         ReferenceNumbersModel referenceNumbersModel = new ReferenceNumbersModel();
         referenceNumbersModel.setType(ERN);
@@ -942,7 +954,27 @@ class HblReportTest extends CommonMocks {
         packingModel.setCommodity("123");
         packingModel.setHazardous(true);
         packingModel.setIsTemperatureControlled(true);
+        packingModel.setWeight(BigDecimal.TEN);
+        packingModel.setVolume(BigDecimal.TEN);
+        packingModel.setWeightUnit("KG");
+        packingModel.setVolumeUnit("M3");
+        packingModel.setPacks("2");
+        packingModel.setPacksType("Bag");
+        packingModel.setContainerId(22L);
         shipmentModel.setPackingList(Arrays.asList(packingModel));
+
+        ContainerModel containerModel = new ContainerModel();
+        containerModel.setId(22L);
+        containerModel.setContainerCode("20GP");
+        containerModel.setContainerNumber("CONT3233323");
+        containerModel.setContainerCount(1L);
+        containerModel.setGrossWeight(BigDecimal.TEN);
+        containerModel.setGrossVolume(BigDecimal.TEN);
+        containerModel.setGrossWeightUnit("KG");
+        containerModel.setGrossVolumeUnit("M3");
+        containerModel.setDescriptionOfGoods("DESC");
+        containerModel.setMarksNums("MarksNums");
+        shipmentModel.setContainersList(Arrays.asList(containerModel));
 
         BookingCarriageModel bookingCarriageModel = new BookingCarriageModel();
         bookingCarriageModel.setCarriageType(PRE_CARRIAGE);
@@ -984,7 +1016,183 @@ class HblReportTest extends CommonMocks {
         Map<String, Object> dictionary = new HashMap<>();
         dictionary.put("id", "123");
         String blObjectJson = objectMapper.writeValueAsString(dataMap);
-        when(jsonHelper.convertToJson(hbl)).thenReturn(blObjectJson);
+        when(jsonHelper.convertToJson(any())).thenReturn(blObjectJson);
+        when(jsonHelper.convertJsonToMap(any())).thenReturn(dictionary);
+        when(jsonHelper.convertJsonToMap(blObjectJson)).thenReturn(dataMap);
+        when(modelMapper.map(consolidationDetails, ConsolidationModel.class)).thenReturn(consolidationModel);
+        mockShipmentSettings();
+        mockTenantSettings();
+        when(cacheManager.getCache(any())).thenReturn(cache);
+        when(cache.get(any())).thenReturn(null);
+        when(keyGenerator.customCacheKeyForMasterData(any(),any())).thenReturn(new StringBuilder());
+        assertNotNull(hblReport.populateDictionary(hblModel));
+    }
+
+    @Test
+    void populateDictionaryWithIsHblTrue_LCL() throws JsonProcessingException {
+        ShipmentSettingsDetailsContext.getCurrentTenantSettings().setIsRunnerV3Enabled(true);
+        HblModel hblModel = new HblModel();
+        hblModel.setIsHbl(true);
+        UsersDto usersDto = new UsersDto();
+        hblModel.setUser(usersDto);
+        Hbl hbl = new Hbl();
+        hbl.setId(123L);
+
+        HblDataDto hblDataDto = new HblDataDto();
+        hblDataDto.setPlaceOfDelivery("deliveryAddress");
+        hblDataDto.setMarksAndNumbers("123");
+        hbl.setHblData(hblDataDto);
+        hblModel.setBlObject(hbl);
+        Map<String, Long> containerGroupMap = new HashMap<>();
+        containerGroupMap.put("TEST", 40L);
+        containerGroupMap.put("TEST2", 40L);
+        hblModel.setContainerCountGrouped(containerGroupMap);
+        hblModel.setContainerPacksGrouped(containerGroupMap);
+        Map<String, Double> volumeGroupMap = new HashMap<>();
+        volumeGroupMap.put("TEST", 40.1);
+        volumeGroupMap.put("TEST2", 40.1);
+        hblModel.setContainerVolumeGrouped(volumeGroupMap);
+        hblModel.setContainerWeightGrouped(volumeGroupMap);
+        hblModel.setTenant(new TenantModel());
+        hblModel.setTenantSettingsResponse(V1TenantSettingsResponse.builder().P100Branch(false).build());
+        hblModel.setShipmentSettingsDetails(ShipmentSettingsDetails.builder().build());
+        ShipmentContainers shipmentContainers = new ShipmentContainers();
+        shipmentContainers.setContainerCount(1L);
+        shipmentContainers.setContainerTypeCode("20GP");
+        shipmentContainers.setNetWeight(BigDecimal.TEN);
+        shipmentContainers.setNoofPackages(10L);
+
+        HblPartyDto hblPartyDto = new HblPartyDto();
+        hbl.setHblNotifyParty(Arrays.asList(hblPartyDto));
+        ShipmentModel shipmentModel = new ShipmentModel();
+        shipmentModel.setTransportInstructionId(12L);
+        shipmentModel.setTransportMode(ReportConstants.SEA);
+        shipmentModel.setDirection(ReportConstants.EXP);
+        shipmentModel.setShipmentType(Constants.SHIPMENT_TYPE_LCL);
+        shipmentModel.setFreightLocal(BigDecimal.TEN);
+        shipmentModel.setFreightLocalCurrency("INR");
+        shipmentModel.setFreightOverseas(BigDecimal.TEN);
+        shipmentModel.setFreightOverseasCurrency("INR");
+        shipmentModel.setGoodsDescription("123");
+        shipmentModel.setWeight(BigDecimal.TEN);
+        shipmentModel.setVolume(BigDecimal.TEN);
+        shipmentModel.setChargable(BigDecimal.TEN);
+        shipmentModel.setVolumetricWeight(BigDecimal.TEN);
+        shipmentModel.setGoodsDescription("DESC");
+        shipmentModel.setMarksNum("Marks");
+        shipmentModel.setNoOfPacks(10);
+        ReferenceNumbersModel referenceNumbersModel = new ReferenceNumbersModel();
+        referenceNumbersModel.setType(ERN);
+        shipmentModel.setReferenceNumbersList(Arrays.asList(referenceNumbersModel));
+
+        PartiesModel partiesModel = new PartiesModel();
+        partiesModel.setType(CUSTOM_HOUSE_AGENT);
+        Map<String, Object> orgData = new HashMap<>();
+        orgData.put(FULL_NAME, "123");
+        orgData.put(CONTACT_PERSON, "123");
+        partiesModel.setOrgData(orgData);
+        partiesModel.setAddressData(orgData);
+        shipmentModel.setConsignee(partiesModel);
+        shipmentModel.setConsigner(partiesModel);
+        shipmentModel.setClient(partiesModel);
+        shipmentModel.setShipmentAddresses(Arrays.asList(partiesModel));
+        CarrierDetailModel carrierDetailModel = new CarrierDetailModel();
+        carrierDetailModel.setOrigin("test");
+        carrierDetailModel.setOriginPort("test");
+        carrierDetailModel.setEta(LocalDateTime.now());
+        carrierDetailModel.setEtd(LocalDateTime.now());
+        carrierDetailModel.setAtd(LocalDateTime.now());
+        carrierDetailModel.setVessel(UUID.randomUUID().toString());
+        carrierDetailModel.setAta(LocalDateTime.now());
+        AdditionalDetailModel additionalDetailModel = new AdditionalDetailModel();
+        additionalDetailModel.setPaidPlace("test");
+        additionalDetailModel.setNotifyParty(partiesModel);
+        additionalDetailModel.setDateOfIssue(LocalDateTime.now());
+        additionalDetailModel.setDateOfReceipt(LocalDateTime.now());
+        additionalDetailModel.setOnBoard("RFS");
+        additionalDetailModel.setOnBoardDate(LocalDateTime.now());
+        additionalDetailModel.setSendingAgent(partiesModel);
+        additionalDetailModel.setReceivingAgent(partiesModel);
+        shipmentModel.setCarrierDetails(carrierDetailModel);
+        shipmentModel.setAdditionalDetails(additionalDetailModel);
+        shipmentModel.setShipmentContainersList(Arrays.asList(shipmentContainers));
+
+        PickupDeliveryDetailsModel delivertDetails = new PickupDeliveryDetailsModel();
+        delivertDetails.setEstimatedPickupOrDelivery(LocalDateTime.now());
+        delivertDetails.setDestinationDetail(partiesModel);
+        delivertDetails.setAgentDetail(partiesModel);
+        delivertDetails.setSourceDetail(partiesModel);
+        delivertDetails.setTransporterDetail(partiesModel);
+        shipmentModel.setPickupDetails(delivertDetails);
+        shipmentModel.setDeliveryDetails(delivertDetails);
+        hblModel.setShipment(shipmentModel);
+
+        PackingModel packingModel = new PackingModel();
+        packingModel.setLength(BigDecimal.TEN);
+        packingModel.setWidth(BigDecimal.TEN);
+        packingModel.setHeight(BigDecimal.TEN);
+        packingModel.setCommodity("123");
+        packingModel.setHazardous(true);
+        packingModel.setIsTemperatureControlled(true);
+        packingModel.setPacks("2");
+        packingModel.setPacksType("Bag");
+        packingModel.setContainerId(22L);
+        shipmentModel.setPackingList(Arrays.asList(packingModel));
+
+        ContainerModel containerModel = new ContainerModel();
+        containerModel.setId(22L);
+        containerModel.setContainerCode("20GP");
+        containerModel.setContainerNumber("CONT3233323");
+        containerModel.setContainerCount(1L);
+        containerModel.setGrossWeight(BigDecimal.TEN);
+        containerModel.setGrossVolume(BigDecimal.TEN);
+        containerModel.setGrossWeightUnit("KG");
+        containerModel.setGrossVolumeUnit("M3");
+        containerModel.setDescriptionOfGoods("DESC");
+        containerModel.setMarksNums("MarksNums");
+        shipmentModel.setContainersList(Arrays.asList(containerModel));
+
+        BookingCarriageModel bookingCarriageModel = new BookingCarriageModel();
+        bookingCarriageModel.setCarriageType(PRE_CARRIAGE);
+        shipmentModel.setBookingCarriagesList(Arrays.asList(bookingCarriageModel));
+
+        ConsolidationModel consolidationModel = new ConsolidationModel();
+        consolidationModel.setPayment("PPM");
+        consolidationModel.setCarrierDetails(carrierDetailModel);
+        partiesModel = new PartiesModel();
+        partiesModel.setType("Notify Party 1");
+        orgData = new HashMap<>();
+        orgData.put(FULL_NAME, "123");
+        partiesModel.setOrgData(orgData);
+        partiesModel.setAddressData(orgData);
+        consolidationModel.setConsolidationAddresses(Arrays.asList(partiesModel));
+        consolidationModel.setReferenceNumbersList(Arrays.asList(referenceNumbersModel));
+
+        when(masterDataUtils.getLocationDataFromCache(any(), anyString())).thenReturn(new HashMap<>());
+        when(masterDataUtils.fetchDgSubstanceRow(any())).thenReturn(new EntityTransferDGSubstance());
+
+        V1DataResponse v1DataResponse = new V1DataResponse();
+        v1DataResponse.entities = Arrays.asList(new MasterData());
+        when(masterDataUtils.fetchMasterListFromCache(any())).thenReturn(new HashMap<>());
+
+
+        v1DataResponse = new V1DataResponse();
+        v1DataResponse.entities = Arrays.asList(new VesselsResponse());
+        when(masterDataUtils.getVesselDataFromCache(any())).thenReturn(new HashMap<>());
+
+        ConsoleShipmentMapping consoleShipmentMapping = new ConsoleShipmentMapping();
+        consoleShipmentMapping.setShipmentId(1L);
+        consoleShipmentMapping.setConsolidationId(1L);
+        when(consoleShipmentMappingDao.findByShipmentIdByQuery(any())).thenReturn(Arrays.asList(consoleShipmentMapping));
+        ConsolidationDetails consolidationDetails = new ConsolidationDetails();
+        consolidationDetails.setId(123L);
+        when(consolidationDetailsDao.findConsolidationsById(any())).thenReturn(consolidationDetails);
+        Map<String, Object> dataMap = new HashMap<>();
+        dataMap.put("id", "123");
+        Map<String, Object> dictionary = new HashMap<>();
+        dictionary.put("id", "123");
+        String blObjectJson = objectMapper.writeValueAsString(dataMap);
+        when(jsonHelper.convertToJson(any())).thenReturn(blObjectJson);
         when(jsonHelper.convertJsonToMap(any())).thenReturn(dictionary);
         when(jsonHelper.convertJsonToMap(blObjectJson)).thenReturn(dataMap);
         when(modelMapper.map(consolidationDetails, ConsolidationModel.class)).thenReturn(consolidationModel);
@@ -1087,6 +1295,8 @@ class HblReportTest extends CommonMocks {
         packingModel.setWidth(BigDecimal.TEN);
         packingModel.setHeight(BigDecimal.TEN);
         packingModel.setHazardous(true);
+        packingModel.setPacks("3");
+        packingModel.setPacksType("BBK");
         shipmentModel.setPackingList(Arrays.asList(packingModel));
 
         BookingCarriageModel bookingCarriageModel = new BookingCarriageModel();
@@ -1393,7 +1603,9 @@ class HblReportTest extends CommonMocks {
         packingModel.setLength(BigDecimal.TEN);
         packingModel.setWidth(BigDecimal.TEN);
         packingModel.setHeight(BigDecimal.TEN);
-        shipmentModel.setPackingList(List.of(packingModel));
+        packingModel.setPacks("4");
+        packingModel.setPacksType("BAG");
+        shipmentModel.setPackingList(Arrays.asList(packingModel));
 
         BookingCarriageModel bookingCarriageModel = new BookingCarriageModel();
         bookingCarriageModel.setCarriageType(PRE_CARRIAGE);
@@ -1597,7 +1809,9 @@ class HblReportTest extends CommonMocks {
         packingModel.setLength(BigDecimal.TEN);
         packingModel.setWidth(BigDecimal.TEN);
         packingModel.setHeight(BigDecimal.TEN);
-        shipmentModel.setPackingList(List.of(packingModel));
+        packingModel.setPacks("4");
+        packingModel.setPacksType("BAG");
+        shipmentModel.setPackingList(Arrays.asList(packingModel));
 
         BookingCarriageModel bookingCarriageModel = new BookingCarriageModel();
         bookingCarriageModel.setCarriageType(PRE_CARRIAGE);
@@ -1783,7 +1997,9 @@ class HblReportTest extends CommonMocks {
         packingModel.setLength(BigDecimal.TEN);
         packingModel.setWidth(BigDecimal.TEN);
         packingModel.setHeight(BigDecimal.TEN);
-        shipmentModel.setPackingList(List.of(packingModel));
+        packingModel.setPacks("4");
+        packingModel.setPacksType("BAG");
+        shipmentModel.setPackingList(Arrays.asList(packingModel));
 
         BookingCarriageModel bookingCarriageModel = new BookingCarriageModel();
         bookingCarriageModel.setCarriageType(PRE_CARRIAGE);
